include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = hamster-applet
DOC_INCLUDES = legal.xml
DOC_LINGUAS = cs de el es fr gl zh_CN zh_HK zh_TW

DOC_PAGES = \
        backup.page \
        index.page \
        input.page \
        merge.page \
        reports.page \
        statistics.page \
        tracking.page
