@YELP_HELP_RULES@

HELP_ID = hamster
HELP_LINGUAS = cs da de el es fa fr gl hu pl pt_BR ro ru sl te zh_CN zh_HK zh_TW

HELP_FILES = \
        backup.page \
        index.page \
        input.page \
        keys.page \
        merge.page \
        reports.page \
        statistics.page \
        tracking.page \
        legal.xml
