SUBDIRS = keybinder widgets
ACLOCAL_AMFLAGS = -I m4

CPPFLAGS = \
	$(PYTHON_INCLUDES)

hamsterdir = $(pyexecdir)/hamster
hamster_PYTHON = \
	defs.py \
	dispatcher.py \
	storage.py \
	db.py \
	eds.py \
	stats.py \
        overview.py \
        overview_totals.py \
        overview_activities.py \
	reports.py \
	charting.py \
        graphics.py \
	configuration.py \
	preferences.py \
	stuff.py \
	edit_activity.py \
	applet.py \
	about.py \
	hamsterdbus.py \
	idle.py \
        i18n.py \
        pytweener.py \
	__init__.py

DISTCLEANFILES = \
	defs.py

EXTRA_DIST = \
	defs.py.in
